# SolarNet

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: acceptor.cpp.3284AA87F0992F47.idx  acceptor.h.179752618157316D.idx  bench_acceptor.cpp.FBDBD6D86F3B4D43.idx  bench_buffer.cpp.E0E4EA66C2BB3B7A.idx  bench_channel.cpp.DD4B4C7BC0D69660.idx  bench_event_loop.cpp.B45BD684C0D34099.idx  bench_event_loop_thread.cpp.2B955707A5AB91E8.idx  bench_event_loop_thread_pool.cpp.38F6138E4A3F1A56.idx  bench_inet_address.cpp.81E87B03DCE1BBEA.idx  bench_poller.cpp.5F3C63A211606476.idx  bench_socket.cpp.43B334122AC59741.idx  bench_tcp_connection.cpp.9E740C04E9865984.idx  bench_tcp_server.cpp.739358BA77AFE468.idx  bench_thread_pool.cpp.FEFF57620CF4D430.idx  bench_timer_queue.cpp.EBDF18B482100B4B.idx  bench_version.cpp.1B24918C40C62C69.idx  buffer.cpp.6B4622CC95CAEEF8.idx  buffer.h.D91D9BEE16EB3637.idx  channel.cpp.9E974BB4F25A46DB.idx  channel.h.F7562DE02F880687.idx  epoll_poller.cpp.AC6B8B989E75A851.idx  epoll_poller.h.7ECE53A355F3F392.idx  event_loop.cpp.E9BBA0D51B9132B2.idx  event_loop.h.8EFB9CE3270A65D7.idx  event_loop_thread.cpp.1DBFC9CC2CFEF99E.idx  event_loop_thread.h.003F762C0B464326.idx  event_loop_thread_pool.cpp.34F5113D4F7BA8BD.idx  event_loop_thread_pool.h.BA2777ADE2302DAE.idx  example_acceptor.cpp.9AFC809884BB1FF1.idx  example_buffer.cpp.E2E38991A9702A24.idx  example_channel.cpp.917410942889907E.idx  example_event_loop.cpp.BAEBCFB681F9D496.idx  example_event_loop_thread.cpp.3BF92D251144E06A.idx  example_event_loop_thread_pool.cpp.AF74B5F16AE8312C.idx  example_inet_address.cpp.99777737D4AA1D18.idx  example_logger.cpp.8142BE7FF6CE2658.idx  example_poller.cpp.E2A7FCF1E12CA9FB.idx  example_socket.cpp.24425ABE4E3EF964.idx  example_tcp_connection.cpp.034F4B3F057A4485.idx  example_tcp_server.cpp.5DD85FB1F457F903.idx  (+44 more)
.github/workflows/: ci.yml
.workbuddy/memory/: 2026-07-02.md  MEMORY.md
benchmarks/: CMakeLists.txt  bench_acceptor.cpp  bench_buffer.cpp  bench_channel.cpp  bench_event_loop.cpp  bench_event_loop_thread.cpp  bench_event_loop_thread_pool.cpp  bench_inet_address.cpp  bench_poller.cpp  bench_socket.cpp  bench_tcp_connection.cpp  bench_tcp_server.cpp  bench_thread_pool.cpp  bench_timer_queue.cpp  bench_version.cpp
docs/: API.md  README.md  acceptor.md  architecture.md  buffer.md  changelog.md  channel.md  event_loop.md  event_loop_thread.md  event_loop_thread_pool.md  examples.md  inet_address.md  logger.md  poller.md  review.md  socket.md  tcp_connection.md  tcp_server.md  thread.md  thread_pool.md  time.md  timer_queue.md  version.md
example/: echo_server.cpp
examples/: CMakeLists.txt  example_acceptor.cpp  example_buffer.cpp  example_channel.cpp  example_event_loop.cpp  example_event_loop_thread.cpp  example_event_loop_thread_pool.cpp  example_inet_address.cpp  example_logger.cpp  example_poller.cpp  example_socket.cpp  example_tcp_connection.cpp  example_tcp_server.cpp  example_thread_pool.cpp  example_timer_queue.cpp  example_version.cpp
logging/: CMakeLists.txt  log.cpp  log.h  test_log.cpp
solar_net/: version.cpp  version.h
solar_net/base/: buffer.cpp  buffer.h  logger.cpp  logger.h  non_copyable.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  time.cpp  time.h
solar_net/net/: channel.cpp  channel.h  epoll_poller.cpp  epoll_poller.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  poller.cpp  poller.h  timer_queue.cpp  timer_queue.h
solar_net/net/transport/: acceptor.cpp  acceptor.h  inet_address.cpp  inet_address.h  socket.cpp  socket.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
src/: acceptor.cpp  acceptor.h  buffer.h  channel.cpp  channel.h  epoll_poller.cpp  epoll_poller.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  socket.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  timer.cpp  timer.h  timer_queue.cpp  timer_queue.h  timestamp.h
tests/: CMakeLists.txt  event_loop_test_util.h  tcp_test_util.h  test_acceptor.cpp  test_buffer.cpp  test_channel.cpp  test_event_loop.cpp  test_event_loop_thread.cpp  test_event_loop_thread_pool.cpp  test_inet_address.cpp  test_logger.cpp  test_poller.cpp  test_socket.cpp  test_tcp_connection.cpp  test_tcp_server.cpp  test_thread.cpp  test_thread_pool.cpp  test_time.cpp  test_timer.cpp  test_timer_queue.cpp  test_version.cpp
